src/index.less
/* ... */
/* scrollbar */
.@{css-prefix}-scrollbar {
  position: absolute;
  bottom: 0;
  right: 0;
  background-color: #f4f5f8;
  opacity: 0.9;
  z-index: 12;
  &.horizontal {
    right: 15px;
    overflow-x: scroll;
    overflow-y: hidden;
    > div {
      height: 1px;
      background: #ddd;
    }
  }
  &.vertical {
    bottom: 15px;
    overflow-x: hidden;
    overflow-y: scroll;
    > div {
      width: 1px;
      background: #ddd;
    }
  }
  &:hover {
    // opacity: .85;
  }
}

/* @{css-prefix}-overlayer */
.@{css-prefix}-overlayer {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 10;
  .@{css-prefix}-overlayer-content {
    position: absolute;
    overflow: hidden;
    pointer-events: none;
    width: 100%;
    height: 100%;
  }
}

.@{css-prefix}-overlayer-clickable-elements-container {
  .@{css-prefix}-overlayer-clickable-elements-inner {
    position: relative;
    > * {
      position: absolute;
      overflow: hidden;
      > * {
        position: absolute;
        pointer-events: auto;
        body.@{css-prefix}-has-ctrl-key & {
          cursor: pointer;
        }
        body.@{css-prefix}-no-ctrl-key & {
          cursor: default;
        }
        * {
          cursor: inherit;
        }
      }
    }
  }
}

.@{css-prefix}-editor, .@{css-prefix}-selector {
  box-sizing: content-box;
  position: absolute;
  overflow: hidden;
  pointer-events: none;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* @{css-prefix}-selector */
.@{css-prefix}-selector {
  .hide-input {
    position: absolute;
    z-index: 0;
    input {
      padding: 0;
      width: 0;
      border: none!important;
    }
  }
  .@{css-prefix}-selector-area {
    position: absolute;
    border: 2px solid @activeSolidColor;
    background: @activeOverlayColor;
    z-index: 5;
  }
  .@{css-prefix}-selector-clipboard, .@{css-prefix}-selector-autofill {
    position: absolute;
    background: transparent;
    z-index: 100;
  }
  .@{css-prefix}-selector-clipboard {
    border: 2px dashed @activeSolidColor;
  }
  .@{css-prefix}-selector-autofill {
    border: 1px dashed rgba(0, 0, 0, .45); // #606060; // rgba(0, 0, 0, .2);
  }
  .@{css-prefix}-selector-corner {
    pointer-events: auto;
    position: absolute;
    cursor: crosshair;
    font-size: 0;
    height: 5px;
    width: 5px;
    right: -5px;
    bottom: -5px;
    border: 2px solid rgb(255, 255, 255);
    background: @activeSolidColor;
  }
}
.@{css-prefix}-editor {
  z-index: 20;
  .@{css-prefix}-editor-area {
    position: absolute;
    text-align: left;
    border: 2px solid @activeSolidColor;
    line-height: 0;
    z-index: 100;
    pointer-events: auto;

    textarea {
      box-sizing: content-box;
      border: none;
      padding: 0 3px;
      outline: none;
      resize: none;
      text-align: start;
      overflow-y: hidden;
      font: 400 13px Arial, 'Lato', 'Source Sans Pro', Roboto, Helvetica, sans-serif;
      color: inherit;
      white-space: normal;
      word-wrap: break-word;
      line-height: 22px;
      margin: 0;
    }

    .textline {
      overflow: hidden;
      visibility: hidden;
      position: fixed;
      top: 0;
      left: 0;
    }
    
    .@{css-prefix}-chooser-hint {
      position: absolute;
      top: -35px;
      left: 0;
      background: #fff;
      border-radius: 3px;
      padding: 15px 5px;
      box-shadow: rgba(0, 0, 0, 0.3) 0 0 5px;
      white-space: nowrap;
      box-sizing: border-box;
    }
  }
}

.@{css-prefix}-item {
  user-select: none;
  background: 0;
  border: 1px solid transparent;
  outline: none;
  height: 26px;
  color: rgba(0, 0, 0, .9);
  line-height: 26px;
  list-style: none;
  padding: 2px 10px;
  cursor: default;
  text-align: left;
  overflow: hidden;

  &.disabled {
    pointer-events: none;
    opacity: 0.5;
  }

  &:hover, &.active {
    background: rgba(0, 0, 0, .05);
  }

  // &.active {
    ////   background: #89aef53d;
  // }

  &.divider {
    height: 0;
    padding: 0;
    margin: 5px 0;
    border: none;
    border-bottom: 1px solid rgba(0, 0, 0, .1);
  }

  .label {
    float: right;
    opacity: .65;
    font-size: 1em;
  }
}

.x-spreadsheet-item,
.x-spreadsheet-header,
{

  &.state {
    padding-left: 35px!important;
    position: relative;

    &:before {
      content: '';
      position: absolute;
      width: 10px;
      height: 10px;
      left: 12px;
      top: calc(50% - 5px);
      background: rgba(0, 0, 0, 0.08);
      // border: 1px solid rgba(0, 0, 0, 0.1);
      border-radius: 2px;
    }
  }
  &.state.checked:before {
    background: #4b89ff;
    // content: '';
    // position: absolute;
    // width: 5px;
    // height: 12px;
    // color: #4b89ff; // #353A41;
    // border-left: none;
    // border-top: none;
    // border-bottom: 2px solid;
    // border-right: 2px solid;
    // left: 15px;
    // top: 6px;
    // background: none;
    // border-radius: 0;
    // transform-origin: center;
    // transform: rotate(45deg);
    // -webkit-transform: rotate(45deg);
  }

}

.@{css-prefix}-checkbox {
  position: relative;
  display: inline-block;
  backface-visibility: hidden;
  outline: 0;
  vertical-align: baseline;
  font-style: normal;
  font-size: 1rem;
  line-height: 1em;
  > input {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0!important;
    outline: 0;
    z-index: -1;
  }
}

.@{css-prefix}-suggest,
.@{css-prefix}-contextmenu,
.@{css-prefix}-sort-filter {
  position: absolute;
  box-shadow: 1px 2px 5px 2px rgba(51, 51, 51, 0.15);
  background: #fff;
  z-index: 100;
  width: 260px;
  pointer-events: auto;
  overflow: auto;
}

.@{css-prefix}-suggest {
  width: 200px;
}
/* ... */

